force-app/main/default/objects/Transport_Animal_Detail__c/Transport_Animal_Detail__c.object-meta.xml
<CustomObject>
    <label>Transport Animal Detail</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Animal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Animal Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>