force-app/main/default/objects/Transport_Animal_Detail__c/fields/Age_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_In_Years__c</fullName>
    <label>Age (In Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>