force-app/main/default/objects/Transport_Animal_Detail__c/fields/Canine_Feline_Age__c.field-meta.xml
<CustomField>
    <fullName>Canine_Feline_Age__c</fullName>
    <formula>IF(AND(ISPICKVAL(Species__c,&apos;Dog&apos;), Combined_Age_In_Weeks__c &gt;= 20),&apos;Dog&apos;,
IF(AND(ISPICKVAL(Species__c,&apos;Dog&apos;), Combined_Age_In_Weeks__c &lt; 20),&apos;Puppy&apos;,
IF(AND(ISPICKVAL(Species__c,&apos;Cat&apos;), Combined_Age_In_Weeks__c &gt;= 20),&apos;Cat&apos;,
IF(AND(ISPICKVAL(Species__c,&apos;Cat&apos;), Combined_Age_In_Weeks__c &lt; 20),&apos;Kitten&apos;,
IF(AND(ISPICKVAL(Species__c,&apos;PeeWee&apos;), Combined_Age_In_Weeks__c &gt;= 20),&apos;PeeWee Cat&apos;,
IF(AND(ISPICKVAL(Species__c,&apos;PeeWee&apos;), Combined_Age_In_Weeks__c &lt; 20),&apos;PeeWee Kitten&apos;,&apos;&apos;))))))</formula>
    <label>Canine/Feline Age</label>
    <type>Text</type>
</CustomField>