force-app/main/default/objects/Transport_Animal_Detail__c/fields/Combined_Age_In_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Combined_Age_In_Weeks__c</fullName>
    <formula>Age_In_Years__c * 52 + Age_In_Months__c * 4 + Age_In_Weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Age (In Weeks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>