force-app/main/default/objects/Transport_Animal_Detail__c/fields/Combined_Age_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Combined_Age_In_Years__c</fullName>
    <formula>Age_In_Years__c +  Age_In_Months__c / 12 +  Age_In_Weeks__c / 52</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Age (In Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>