force-app/main/default/objects/Transport_Animal_Detail__c/fields/Destination_Other_Than_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Destination_Other_Than_Shelter__c</fullName>
    <label>Destination Other Than Shelter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>