force-app/main/default/objects/Transport_Animal_Detail__c/fields/Destination_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Destination_Shelter__c</fullName>
    <label>Destination Shelter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>