force-app/main/default/objects/Transport_Animal_Detail__c/fields/Destination_Shelter_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Destination_Shelter_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Shelter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transport Animal Details (Destination Shelter)</relationshipLabel>
    <relationshipName>Transport_Animals1</relationshipName>
    <type>Lookup</type>
</CustomField>