force-app/main/default/objects/Transport_Animal_Detail__c/fields/Destination_Shelter_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_Shelter_State__c</fullName>
    <formula>Destination_Shelter_Lookup__r.BillingState</formula>
    <label>Destination Shelter State</label>
    <type>Text</type>
</CustomField>