force-app/main/default/objects/Transport_Animal_Detail__c/fields/Dog_Size__c.field-meta.xml
<CustomField>
    <fullName>Dog_Size__c</fullName>
    <formula>IF( Weight_In_Lbs__c &lt; 25, &apos;Small&apos;, 
IF( Weight_In_Lbs__c &lt; 50, &apos;Medium&apos;, 
IF( Weight_In_Lbs__c &gt;=50, &apos;Large&apos;,&apos;&apos;)))</formula>
    <label>Dog Size</label>
    <type>Text</type>
</CustomField>