force-app/main/default/objects/Transport_Animal_Detail__c/fields/FIV_Status__c.field-meta.xml
<CustomField>
    <fullName>FIV_Status__c</fullName>
    <label>FIV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>NEG</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>