force-app/main/default/objects/Transport_Animal_Detail__c/fields/Imported_Record__c.field-meta.xml
<CustomField>
    <fullName>Imported_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported Record</label>
    <type>Checkbox</type>
</CustomField>