force-app/main/default/objects/Transport_Animal_Detail__c/fields/Intake_Type__c.field-meta.xml
<CustomField>
    <fullName>Intake_Type__c</fullName>
    <label>Intake Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Guardian Surrender</fullName>
            </value>
            <value>
                <fullName>Stray</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Seized/Custody</fullName>
            </value>
            <value>
                <fullName>Born In Care</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Service In</fullName>
                <isActive>false</isActive>
                <label>Service In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>