force-app/main/default/objects/Transport_Animal_Detail__c/fields/LA_County_Destination_Shelter__c.field-meta.xml
<CustomField>
    <fullName>LA_County_Destination_Shelter__c</fullName>
    <formula>Destination_Shelter_Lookup__r.LA_County_Agency__c</formula>
    <label>LA County Destination Shelter</label>
    <type>Checkbox</type>
</CustomField>