force-app/main/default/objects/Transport_Animal_Detail__c/fields/LA_County_Source_Shelter__c.field-meta.xml
<CustomField>
    <fullName>LA_County_Source_Shelter__c</fullName>
    <formula>Source_Shelter_Lookup__r.LA_County_Agency__c</formula>
    <label>LA County Source Shelter</label>
    <type>Checkbox</type>
</CustomField>