force-app/main/default/objects/Transport_Animal_Detail__c/fields/Number_of_Nights_at_Waystation__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights_at_Waystation__c</fullName>
    <label>Number of Nights at Waystation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>