force-app/main/default/objects/Transport_Animal_Detail__c/fields/Other_Species__c.field-meta.xml
<CustomField>
    <fullName>Other_Species__c</fullName>
    <label>Other Species</label>
    <length>255</length>
    <type>Text</type>
</CustomField>