force-app/main/default/objects/Transport_Animal_Detail__c/fields/Source_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Source_Shelter__c</fullName>
    <label>Source Shelter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>