force-app/main/default/objects/Transport_Animal_Detail__c/fields/Source_Shelter_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Source_Shelter_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Shelter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transport Animal Details (Source Shelter)</relationshipLabel>
    <relationshipName>Transport_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>