force-app/main/default/objects/Transport_Animal_Detail__c/fields/Source_Shelter_State__c.field-meta.xml
<CustomField>
    <fullName>Source_Shelter_State__c</fullName>
    <formula>Source_Shelter_Lookup__r.BillingState</formula>
    <label>Source Shelter State</label>
    <type>Text</type>
</CustomField>