force-app/main/default/objects/Transport_Animal_Detail__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>PeeWee</fullName>
            </value>
            <value>
                <fullName>Avian</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Guinea Pig</fullName>
            </value>
            <value>
                <fullName>Rodent</fullName>
            </value>
            <value>
                <fullName>Turtle</fullName>
            </value>
            <value>
                <fullName>Snake</fullName>
            </value>
            <value>
                <fullName>Lizard</fullName>
            </value>
            <value>
                <fullName>Pig</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>