force-app/main/default/objects/Transport_Animal_Detail__c/fields/Transport_ID__c.field-meta.xml
<CustomField>
    <fullName>Transport_ID__c</fullName>
    <label>Transport ID</label>
    <referenceTo>Animal_Transport__c</referenceTo>
    <relationshipLabel>Transport Animal Details</relationshipLabel>
    <relationshipName>Transport_Animals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>