force-app/main/default/objects/Transport_Animal_Detail__c/fields/Waystation__c.field-meta.xml
<CustomField>
    <fullName>Waystation__c</fullName>
    <label>Waystation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARLGP</fullName>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Augusta</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Chattaneuter</fullName>
            </value>
            <value>
                <fullName>GAHS</fullName>
            </value>
            <value>
                <fullName>HSGKC</fullName>
            </value>
            <value>
                <fullName>KCK - Kansas</fullName>
            </value>
            <value>
                <fullName>Louisville</fullName>
            </value>
            <value>
                <fullName>NVL</fullName>
            </value>
            <value>
                <fullName>PAAS-Vinita</fullName>
            </value>
            <value>
                <fullName>Rockingham</fullName>
            </value>
            <value>
                <fullName>Tri-City</fullName>
            </value>
            <value>
                <fullName>Wayside Waifs</fullName>
            </value>
            <value>
                <fullName>Yreka</fullName>
            </value>
            <value>
                <fullName>Vinita</fullName>
            </value>
            <value>
                <fullName>HES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>