force-app/main/default/objects/Transport_Animal_Detail__c/fields/Weight_In_Lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_In_Lbs__c</fullName>
    <label>Weight (In Lbs)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>